--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
     /*background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcReuvhu8KQ7tOxSB6KEVN_55CsAGkSBCkzcp5ww5gVgmTm9hIZU7-B3a8aEQJhqdh5mlZI&usqp=CAU");*/
-    background-image: url(top.jpeg);
+    background-image: url(top.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
